app.css
/* ... */
 .slide-up {
    animation: slide-up 1s forwards ease;
    -webkit-animation: slide-up 1s forwards ease;
}
@keyframes slide-up {
    0% {
        transform: translateY(50px);
        -webkit-transform: translateY(50px);
        -moz-transform: translateY(50px);
        -ms-transform: translateY(50px);
        -o-transform: translateY(50px);
    }
    100% {
        transform: translateY(0);
        -webkit-transform: translateY(0);
        -moz-transform: translateY(0);
        -ms-transform: translateY(0);
        -o-transform: translateY(0);
        visibility: visible;
    }
}

.fade-in {
    animation: fade-in 0.7s forwards ease;
    -webkit-animation: fade-in 0.7s forwards ease;
}
@keyframes fade-in {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1; 
        visibility: visible;
    }
}

/* ======================= Animations Ends Here ===================== */


/* scroll-behavior must be added to the html element to enable good scrolling effect for the entire page.
If this property is set elsewhere, the desired effect won't work, it has to be the html tag */
html {
    scroll-behavior: smooth;
}

body{
    /* background: url(images/naru-logo-backdrop-pattern.png) no-repeat;
    background-size: 600px;
    background-position-y: 100vh; */
    background-color: var(--dark-purple);
    color: var(--text-color);
    font-family: 'Raleway', sans-serif;
    font-weight: 300;
    font-size: 14px;
}

a {
    text-decoration: none;
    color: var(--text-color);
}

button {
    font-family: 'Raleway', sans-serif;
    font-weight: 400;
}

.dim-background {
    display: none;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 11;
    background-color: rgba(21, 11, 26, 0.8);
}
.photo-holder {
    position: absolute;
    /* background-size: contain;
    background-position: center; */
    width: 80%;
    max-width: 800px;
    height: 70%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    box-shadow: 0 3 10px 10px black;
    background-color: white;
}

.pattern {
    position: fixed;
    /* border: 1px solid var(--yellow); 
    top: 55%; */
    left: -50px;
    bottom: 0;
    width: 70%;
    max-width: 750px;
    height: 300px;
    background: url(images/naru-logo-backdrop-pattern.png) no-repeat;
    background-size: cover;
    background-position: bottom left;
    opacity: 0.1;
    z-index: -1;
}

.container { 
    display: non;
    width: var(--container-width);
    max-width: 1366px;
    margin: 0 auto;
}

.nav {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 10;
    background-color: var(--dark-purple);
   /* border: 1px solid yellow;
    width: var(--container-width);*/
    width: 100%;
    padding: 0 7.8%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.logo {
    width: 130px;
    height: 130px;
    background: url(images/naru-logo-yellow.png) no-repeat;
    background-size: 120px;
    background-position: center;
    background-color: var(--light-purple);
    align-self: flex-start;
}
.menu,
.close-menu {
    cursor: pointer;
    display: none;
}
.menu-items {
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    align-items: center;
    /* border: 1px solid var(--yellow); */
    width: 400px;
}
.nav-skills,
.nav-resume {
    color: var(--text-color);
    font-size: 13px;
}
.nav-skills:hover,
.nav-resume:hover {
    text-decoration: underline;
}
/* all yellow buttons */
.colored-btn {
    padding: 15px 25px;
    border: none;
    background-color: var(--yellow);
    font-size: 12px;
    cursor: pointer;
}
.colored-btn:hover {
    background: none;
    color: var(--yellow);
    border: 1px solid var(--yellow);
}
/* .nav-say-hello:hover .nav-say-hello-text {
    color: var(--yellow);
}
.nav-say-hello-text {
    color: var(--dark-purple);
} */
.main {
    margin-top: 140px;
    /* border: 1px solid var(--very-light-purple); */
}
.intro {
    /* border: 1px solid var(--yellow); */
    text-align: center;
    margin: 0 auto;
}
.memoji {
    width: 200px;
    height: 200px;
    margin: 0 auto;
    margin-bottom: var(--md-space);
    background: url(images/naru-memoji.png) no-repeat;
    background-size: 120px;
    background-position: center;
    background-color: var(--light-purple);
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
}
.intro-hi {
    margin-bottom: 10px;
    font-size: 1rem;
    animation-delay: 0.5s;
    visibility: hidden;
}
.intro-name {
    color: var(--yellow);
    margin-bottom: var(--md-space);
    font-size: 2rem;
    font-weight: 600;
    line-height: 1;
    letter-spacing: -1px;
    animation-delay: 0.7s;
    visibility: hidden;
}
.intro-name--emphasis {
    color: var(--text-color);
}
.intro-about-me {
    font-size: 1rem;
    line-height: 1.7;
    margin-bottom: var(--md-space);
    animation-delay: 0.9s;
    visibility: hidden;
}
.intro-my-works-btn {
    padding: 15px 50px;
    margin-bottom: var(--sm-space); 
    animation-delay: 1.2s;
    visibility: hidden; 
}
.intro-too-fancy {
    text-decoration: underline;
    color: var(--yellow);
    cursor: pointer;
    margin-bottom: var(--lg-space);
    opacity: 0;
    animation-delay: 1.6s;
}

/* ----------------- SKILLS -------------- */
.skills {
    /* border: 1px solid var(--yellow); */
    margin-bottom: var(--lg-space);
}
.header {
    color: var(--yellow);
    font-size: 1.2rem;
    margin-bottom: var(--sm-space);
}
hr {
    background-color: var(--text-color);
    border: none;
    height: 1px;
    opacity: 0.2;
    margin-bottom: var(--md-space);
}
.all-skills {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 1.5em;
    /* flex-wrap: wrap; */
}
/* ... */

